Add DB connection status indicator to login/dashboard pages and fix MongoDB SSL connection issues

--- a/Inventory-Management/public/dashboard.html
+++ b/Inventory-Management/public/dashboard.html
@@ -32,6 +32,15 @@
                     </button>
                 </form>
                 <div id="loginMessage" class="message"></div>
+                
+                <!-- DB Status Indicator -->
+                <div class="db-status-container">
+                    <div id="dbStatus" class="db-status checking">
+                        <span class="status-dot"></span>
+                        <span class="status-text">Checking connection...</span>
+                        <span class="status-ping"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
