--- a/Inventory-Management/public/index.html
+++ b/Inventory-Management/public/index.html
@@ -14,6 +14,12 @@
         <!-- Login Page -->
         <div id="loginPage" class="page active">
             <div class="card">
+                <div class="status-bar">
+                    <span id="dbStatus" class="db-status">
+                        <span class="status-dot"></span>
+                        <span class="status-text">Checking connection...</span>
+                    </span>
+                </div>
                 <h2>Login</h2>
                 <form id="loginForm">
                     <div class="form-group">
